# device_gdb

./: CMakeLists.txt  README.md
example/: Makefile  host_exec.c  linker_host.ld  runner.c
example/include/: simwork.h
example/src/: simwork.c
include/: config.h  elf_loader.h  zdb_backend.h  zdb_cmd.h
src/: elf_loader.cpp  main.cpp  repl.cpp
src/backend/: mock_backend.cpp  real_backend.cpp
src/command/: debug.cpp  load.cpp  regs.cpp  status.cpp  vars.cpp
